--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Crispy</title>
-  <base href="/">
+  <title>Crispy Restaurant Category Flat Bootstrap Responsive Website Template | Home :: W3layouts</title>
+  <!-- for-mobile-apps -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="keywords" content="Crispy Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+  Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+  <base href="/">
+  <script>
+    addEventListener("load", function () {
+        setTimeout(hideURLbar, 0);
+    }, false);
+
+    function hideURLbar() {
+        window.scrollTo(0, 1);
+    }
+  </script>
+
+  <!-- css files -->
+  <link href="assets/css/css_slider.css" type="text/css" rel="stylesheet" media="all"><!-- slider css -->
+  <link href="assets/css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
+  <link href="assets/css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
+  <!-- //css files -->
+
+  <!-- google fonts -->
+  <link href="//fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
+  <!-- //google fonts -->
 </head>
 <body>
   <app-root></app-root>
